--- a/css/style.css
+++ b/css/style.css
@@ -104,14 +104,18 @@ p {
 }
 
 .company-name-overlay h1 {
-    font-size: 5rem;
+    font-size: 3.8rem;
     font-weight: bold;
     margin-bottom: 1rem;
     max-width: 100%;
 }
 
+.company-name-overlay h2 {
+    font-size: 2.5rem;
+}
+
 .company-name-overlay p {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     margin-bottom: 1.3rem;
     max-width: 100%;
     line-height: 1.5;
@@ -343,7 +347,7 @@ footer .fw-bold {
 
 footer p {
     color: #000000;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 footer .text-light {
